<resources>
    <string name="app_name">Sd Quiz App</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="congratulations">Congratulations !</string>
    <string name="finish">Finish</string>

</resources>